--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         
       <div class="block" id="block-efqac">
         <div class="primo-component" id="component-efqac">
-          <div><section class="container relative bg-gray-100 top-6 h-auto min-h-screen pt-4">
+          <div><section class="container relative bg-gray-100 top-6 md:h-auto md:min-h-screen md:w-auto pt-4">
     	<div class="justify-between flex">
         	<a href="" class="text-2xl font-medium text-blue-900"><i class="fa fa-linkedin-square pr-2"></i>Linkedin</a>
         	<h1 class="text-4xl font-mono text-blue-900 font-semibold tracking-widest">Cassiopea</h1>
         	<button class="text-2xl text-blue-900"><i class="fa fa-search"></i> <i class="fa fa-shopping-cart"></i> </button>
         </div>
-        <div class="flex justify-center pt-6">
+        <div class="flex justify-center py-12">
             	<div class="mx-8 text-xl font-mono font-semibold tracking-wider">
             	<a href="" class="text-gray-800">Flowers</a>
             	</div>
@@ -36,6 +36,9 @@
             	<div class="mx-8 text-xl font-mono font-semibold tracking-wider">
             	<a href="" class="text-gray-800">About us</a>
             	</div>
+        </div>
+        <div class="h-96 w-auto filter blur-1  " style="background-image:url(https://images.unsplash.com/photo-1547414924-b71ebb598495?ixid&#x3D;MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;ixlib&#x3D;rb-1.2.1&amp;auto&#x3D;format&amp;fit&#x3D;crop&amp;w&#x3D;1351&amp;q&#x3D;80);">
+            
         </div>
 </section>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
