--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="/styles.css" />
+        <link rel="stylesheet" type="text/css" href="./styles.css" />
         
         <script src="./index.js"></script>
         
@@ -40,11 +40,12 @@
     Best deals this week, Fresh flowers, plants and gifts </p> 
     <button class="absolute top-32 left-6 bg-black text-white px-6 py-2 text-xl rounded-md"> See more <i class="pl-4 animate-ping fa fa-angle-right"></i> </button> 
    </div> 
-   <div class="flex justify-center  py-4">
-       	<div class=" h-80 w-auto  mr-12" style="background-image:url(https://images.unsplash.com/photo-1546471180-335a013cb87b?ixid&#x3D;MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;ixlib&#x3D;rb-1.2.1&amp;auto&#x3D;format&amp;fit&#x3D;crop&amp;w&#x3D;634&amp;q&#x3D;80);">
-			first image       	    
+   <div class="flex justify-center h-72  relative mt-8">
+       	<div class="relative w-6/12 rounded-3xl bg-cover mr-12" style="background-image:url(https://images.pexels.com/photos/1809344/pexels-photo-1809344.jpeg?auto&#x3D;compress&amp;cs&#x3D;tinysrgb&amp;dpr&#x3D;1&amp;w&#x3D;500);">
+			<span class="absolute top-4 text-gray-800 left-12 text-3xl font-semibold font-mono">Nice little gifts</span>
+            <span class="absolute top-14 left-24 text-2xl text-gray-700 font-serif font-semibold">for loved ones</span>
        	</div>
-        <div class="h-80 w-96" style="background-image:url(https://source.unsplash.com/900x600);">
+        <div class=" w-6/12 rounded-3xl bg-cover filter drop-shadow-lg" style="background-image:url(https://unsplash.com/photos/N9lmtlOuaDM/download?force&#x3D;true&amp;w&#x3D;640);">
             second image
         </di>
    </div>
