--- a/index.html
+++ b/index.html
@@ -41,12 +41,13 @@
     <button class="absolute top-32 left-6 bg-black text-white px-6 py-2 text-xl rounded-md"> See more <i class="pl-4 animate-ping fa fa-angle-right"></i> </button> 
    </div> 
    <div class="flex justify-center h-72  relative mt-8">
-       	<div class="relative w-6/12 rounded-3xl bg-cover mr-12" style="background-image:url(https://images.pexels.com/photos/1809344/pexels-photo-1809344.jpeg?auto&#x3D;compress&amp;cs&#x3D;tinysrgb&amp;dpr&#x3D;1&amp;w&#x3D;500);">
-			<span class="absolute top-4 text-gray-800 left-12 text-3xl font-semibold font-mono">Nice little gifts</span>
-            <span class="absolute top-14 left-24 text-2xl text-gray-700 font-serif font-semibold">for loved ones</span>
+       	<div class="relative w-6/12 rounded-3xl bg-center bg-  mr-12" style="background-image:url(https://images.pexels.com/photos/122734/pexels-photo-122734.jpeg?auto&#x3D;compress&amp;cs&#x3D;tinysrgb&amp;dpr&#x3D;2&amp;h&#x3D;650&amp;w&#x3D;940);">
+			<span class="absolute bottom-12 text-gray-800 right-12 text-3xl font-semibold font-mono">Nice little gifts</span>
+            <span class="absolute bottom-4 right-20 text-2xl text-gray-700 font-serif font-semibold">for loved ones</span>
        	</div>
-        <div class=" w-6/12 rounded-3xl bg-cover filter drop-shadow-lg" style="background-image:url(https://unsplash.com/photos/N9lmtlOuaDM/download?force&#x3D;true&amp;w&#x3D;640);">
-            second image
+        <div class="relative w-6/12 rounded-3xl bg-cover filter drop-shadow-lg" style="background-image:url(https://unsplash.com/photos/N9lmtlOuaDM/download?force&#x3D;true&amp;w&#x3D;640);">
+            <span class="absolute top-12 text-3xl left-12 font-serif font-semibold text-gray-700 ">Plants</span>
+            <span class="text-2xl absolute top-20 font-serif left-12 text-gray-600">for home comfort</span>
         </di>
    </div>
   </section> 
