--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
     <i class="pl-4 fa fa-angle-right"></i> 
     </button> 
    </div> 
-   <div class="grid grid-cols-2 gap-12 justify-center h-72  relative mt-8">
-       	<div class="  rounded-3xl bg-center " style="background-image:url();">
-			<div class="px-12 pt-8 text-gray-800 text-3xl font-semibold ">
+   <div class="grid grid-cols-2 gap-12 justify-center h-72 relative mt-8">
+       	<div class="  rounded-3xl bg-cover  " style="background-image:url(https://unsplash.com/photos/jcsXq4614dA/download?force&#x3D;true&amp;w&#x3D;640);">
+			<div class="px-12 pt-8 text-gray-300 text-3xl font-semibold ">
             Nice little gifts</div>
-            <span class="px-14 text-2xl text-gray-700 f font-semibold">
+            <span class="px-20 text-2xl text-gray-300 font-semibold">
             for loved ones</span>
        	</div>
-        <div class=" rounded-3xl bg-cover filter drop-shadow-xl"
+        <div class=" rounded-3xl bg-cover"
         style="background-image:url(https://unsplash.com/photos/N9lmtlOuaDM/download?force&#x3D;true&amp;w&#x3D;640);">
             <div class="text-3xl font-semibold text-gray-700 px-6 pt-12">Plants</div>
             <div class="text-2xl  text-gray-600 px-8 font-semibold">for home comfort</div>
