--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="primo-component" id="component-rdmuc">
           <div><div class="container pt-8 pb-12 bg-white">
 	<h2 class="text-4xl font-semibold">New</h2>
-    <div class="pt-4 grid gap-8 md:grid-cols-2 lg:grid-cols-3">
+    <div class="pt-4 grid gap-8 grid-flow-col">
         <div class="text-gray-800 bg-white shadow-xl p-8 rounded-lg">
                     	<img class="mb-8 h-auto w-full" src="https://unsplash.com/photos/YP4NILq7qFo/download?force&#x3D;true&amp;w&#x3D;640" alt="Tree" />
             <h3 class="text-2xl font-bold text-center">Red Flower - 5 pcs</h3>
