--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class=" text-xl font-semibold tracking-wider"> 
      <a href="" class="text-gray-800">Flowers</a> 
     </div>     <div class=" text-xl font-semibold tracking-wider"> 
-     <a href="" class="text-gray-800">Plants</a> 
+     <a href="http://cassiopea.vercel.app/plants" class="text-gray-800">Plants</a> 
     </div>     <div class=" text-xl font-semibold tracking-wider"> 
      <a href="" class="text-gray-800">Gifts</a> 
     </div>     <div class=" text-xl font-semibold tracking-wider"> 
