--- a/plants/index.html
+++ b/plants/index.html
@@ -13,7 +13,7 @@
         <div>
           <section class="container pt-4 bg-white">
             <span class="text-lg"
-              ><a href="">Home</a><i> / </i>
+              ><a href="https://cassiopea.vercel.app/">Home</a><i> / </i>
               <i class="font-bold">Plants</i></span
             >
             <div class="pt-12">
