--- a/plants/index.html
+++ b/plants/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" type="text/css" href="../styles.css" />
 
     <script src="./index.js"></script>
+
+    <tittle>Plants by abdelfatah</tittle>
   </head>
   <body data-instant-intensity="all" class="primo-page">
     <div class="block" id="block-mackf">
