--- a/plants/index.html
+++ b/plants/index.html
@@ -10,113 +10,118 @@
     <tittle>Plants by abdelfatah</tittle>
   </head>
   <body data-instant-intensity="all" class="primo-page">
-    <div class="block" id="block-mackf">
-      <div class="primo-component" id="component-mackf">
+    <div class="block" id="block-xjsxp">
+      <div class="primo-component" id="component-xjsxp">
         <div>
-          <section class="container pt-4 bg-white">
+          <div class="container bg-white py-6 h-auto">
             <span class="text-lg"
               ><a href="https://cassiopea.vercel.app/">Home</a><i> / </i>
               <i class="font-bold">Plants</i></span
             >
-            <div class="pt-12">
-              <h2 class="text-4xl font-semibold">All Plants</h2>
-              <div class="flex py-8">
-                <nav class="font-semibold text-xl px-8">
-                  Sort by <i class="px-2 fa fa-angle-down"></i>
-                </nav>
-                <nav class="font-semibold text-xl px-8">
-                  Color <i class="px-2 fa fa-angle-down"></i>
-                </nav>
-                <nav class="font-semibold text-xl px-8">
-                  Price <i class="px-2 fa fa-angle-down"></i>
-                </nav>
-                <nav class="font-semibold text-xl px-8">
-                  Flower Type <i class="px-2 fa fa-angle-down"></i>
-                </nav>
-                <nav class="font-semibold text-xl px-8">
-                  Occasion <i class="px-2 fa fa-angle-down"></i>
-                </nav>
-                <div class="ml-auto text-xl font-semibold">24 Items</div>
+            <h2 class="text-4xl font-semibold pt-6">All Plants</h2>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="block" id="block-mackf">
+      <div class="primo-component" id="component-mackf">
+        <div>
+          <section class="container pt-4 bg-white">
+            <div class="flex py-4">
+              <nav class="font-semibold text-xl px-8">
+                Sort by <i class="px-2 fa fa-angle-down"></i>
+              </nav>
+              <nav class="font-semibold text-xl px-8">
+                Color <i class="px-2 fa fa-angle-down"></i>
+              </nav>
+              <nav class="font-semibold text-xl px-8">
+                Price <i class="px-2 fa fa-angle-down"></i>
+              </nav>
+              <nav class="font-semibold text-xl px-8">
+                Flower Type <i class="px-2 fa fa-angle-down"></i>
+              </nav>
+              <nav class="font-semibold text-xl px-8">
+                Occasion <i class="px-2 fa fa-angle-down"></i>
+              </nav>
+              <div class="ml-auto text-xl font-semibold">24 Items</div>
+            </div>
+            <div class="grid gap-8 md:grid-flow-col md:grid-rows-2">
+              <div class="text-gray-800 bg-white shadow-xl p-8 rounded-lg">
+                <img
+                  class="mb-8 h-64 w-full"
+                  src="https://unsplash.com/photos/chyPcrDjcZg/download?force&#x3D;true&amp;w&#x3D;640"
+                  alt="Tree"
+                />
+                <h3 class="text-2xl font-bold text-center">
+                  Red Flower - 5 pcs
+                </h3>
+                <div class="text-xl pt-4 text-center">44$</div>
               </div>
-              <div class="grid gap-8 md:grid-flow-col md:grid-rows-2">
-                <div class="text-gray-800 bg-white shadow-xl p-8 rounded-lg">
-                  <img
-                    class="mb-8 h-64 w-full"
-                    src="https://unsplash.com/photos/chyPcrDjcZg/download?force&#x3D;true&amp;w&#x3D;640"
-                    alt="Tree"
-                  />
-                  <h3 class="text-2xl font-bold text-center">
-                    Red Flower - 5 pcs
-                  </h3>
-                  <div class="text-xl pt-4 text-center">44$</div>
-                </div>
-                <div class="text-gray-800 bg-white shadow-xl p-8 rounded-lg">
-                  <img
-                    class="mb-8 h-64 w-full"
-                    src="https://unsplash.com/photos/vHkj3fX9wCk/download?force&#x3D;true&amp;w&#x3D;640"
-                    alt="Forest"
-                  />
-                  <h3 class="text-2xl font-bold text-center">
-                    Black &amp; Rose
-                  </h3>
-                  <div class="text-xl pt-4 text-center">53$</div>
-                </div>
-                <div class="text-gray-800 bg-white shadow-xl p-8 rounded-lg">
-                  <img
-                    class="mb-8 h-64 w-full"
-                    src="https://unsplash.com/photos/miziNqvJx5M/download?force&#x3D;true&amp;w&#x3D;640"
-                    alt="Metro"
-                  />
-                  <h3 class="text-2xl font-bold text-center">Green indoor</h3>
-                  <div class="text-xl pt-4 text-center">70$</div>
-                </div>
-                <div class="text-gray-800 bg-white shadow-xl p-8 rounded-lg">
-                  <img
-                    class="mb-8 h-64 w-full"
-                    src="https://unsplash.com/photos/WwWkgOMU8H8/download?force&#x3D;true&amp;w&#x3D;640"
-                    alt=""
-                  />
-                  <h3 class="text-2xl font-bold text-center">
-                    Cactus plan is love
-                  </h3>
-                  <div class="text-xl pt-4 text-center">67$</div>
-                </div>
-                <div class="text-gray-800 bg-white shadow-xl p-8 rounded-lg">
-                  <img
-                    class="mb-8 h-64 w-full"
-                    src="https://unsplash.com/photos/tYSbj-ddm9U/download?force&#x3D;true&amp;w&#x3D;640"
-                    alt=""
-                  />
-                  <h3 class="text-2xl font-bold text-center">Red Cactus</h3>
-                  <div class="text-xl pt-4 text-center">45$</div>
-                </div>
-                <div class="text-gray-800 bg-white shadow-xl p-8 rounded-lg">
-                  <img
-                    class="mb-8 h-64 w-full"
-                    src="https://unsplash.com/photos/6Rs76hNbIWE/download?force&#x3D;true&amp;w&#x3D;640"
-                    alt=""
-                  />
-                  <h3 class="text-2xl font-bold text-center">Green Cactus</h3>
-                  <div class="text-xl pt-4 text-center">45$</div>
-                </div>
-                <div class="text-gray-800 bg-white shadow-xl p-8 rounded-lg">
-                  <img
-                    class="mb-8 h-64 w-full"
-                    src="https://unsplash.com/photos/TRAF_LhFCUs/download?force&#x3D;true&amp;w&#x3D;640"
-                    alt=""
-                  />
-                  <h3 class="text-2xl font-bold text-center">Cute cactus</h3>
-                  <div class="text-xl pt-4 text-center">30$</div>
-                </div>
-                <div class="text-gray-800 bg-white shadow-xl p-8 rounded-lg">
-                  <img
-                    class="mb-8 h-64 w-full"
-                    src="https://unsplash.com/photos/f7PfM2NklZ4/download?force&#x3D;true&amp;w&#x3D;640"
-                    alt=""
-                  />
-                  <h3 class="text-2xl font-bold text-center">Cup cactus</h3>
-                  <div class="text-xl pt-4 text-center">30$</div>
-                </div>
+              <div class="text-gray-800 bg-white shadow-xl p-8 rounded-lg">
+                <img
+                  class="mb-8 h-64 w-full"
+                  src="https://unsplash.com/photos/vHkj3fX9wCk/download?force&#x3D;true&amp;w&#x3D;640"
+                  alt="Forest"
+                />
+                <h3 class="text-2xl font-bold text-center">Black &amp; Rose</h3>
+                <div class="text-xl pt-4 text-center">53$</div>
+              </div>
+              <div class="text-gray-800 bg-white shadow-xl p-8 rounded-lg">
+                <img
+                  class="mb-8 h-64 w-full"
+                  src="https://unsplash.com/photos/miziNqvJx5M/download?force&#x3D;true&amp;w&#x3D;640"
+                  alt="Metro"
+                />
+                <h3 class="text-2xl font-bold text-center">Green indoor</h3>
+                <div class="text-xl pt-4 text-center">70$</div>
+              </div>
+              <div class="text-gray-800 bg-white shadow-xl p-8 rounded-lg">
+                <img
+                  class="mb-8 h-64 w-full"
+                  src="https://unsplash.com/photos/WwWkgOMU8H8/download?force&#x3D;true&amp;w&#x3D;640"
+                  alt=""
+                />
+                <h3 class="text-2xl font-bold text-center">
+                  Cactus plan is love
+                </h3>
+                <div class="text-xl pt-4 text-center">67$</div>
+              </div>
+              <div class="text-gray-800 bg-white shadow-xl p-8 rounded-lg">
+                <img
+                  class="mb-8 h-64 w-full"
+                  src="https://unsplash.com/photos/tYSbj-ddm9U/download?force&#x3D;true&amp;w&#x3D;640"
+                  alt=""
+                />
+                <h3 class="text-2xl font-bold text-center">Red Cactus</h3>
+                <div class="text-xl pt-4 text-center">45$</div>
+              </div>
+              <div class="text-gray-800 bg-white shadow-xl p-8 rounded-lg">
+                <img
+                  class="mb-8 h-64 w-full"
+                  src="https://unsplash.com/photos/6Rs76hNbIWE/download?force&#x3D;true&amp;w&#x3D;640"
+                  alt=""
+                />
+                <h3 class="text-2xl font-bold text-center">Green Cactus</h3>
+                <div class="text-xl pt-4 text-center">45$</div>
+              </div>
+              <div class="text-gray-800 bg-white shadow-xl p-8 rounded-lg">
+                <img
+                  class="mb-8 h-64 w-full"
+                  src="https://unsplash.com/photos/TRAF_LhFCUs/download?force&#x3D;true&amp;w&#x3D;640"
+                  alt=""
+                />
+                <h3 class="text-2xl font-bold text-center">Cute cactus</h3>
+                <div class="text-xl pt-4 text-center">30$</div>
+              </div>
+              <div class="text-gray-800 bg-white shadow-xl p-8 rounded-lg">
+                <img
+                  class="mb-8 h-64 w-full"
+                  src="https://unsplash.com/photos/f7PfM2NklZ4/download?force&#x3D;true&amp;w&#x3D;640"
+                  alt=""
+                />
+                <h3 class="text-2xl font-bold text-center">Cup cactus</h3>
+                <div class="text-xl pt-4 text-center">30$</div>
               </div>
             </div>
             <div class="py-12">
@@ -135,7 +140,7 @@
         </div>
       </div>
       <style type="text/css">
-        #component-zpxrx .grid {
+        #component-mackf .grid {
             grid-template-columns: repeat( auto-fit, minmax(300px, 1fr) );
           }
       </style>
