--- a/plants/index.html
+++ b/plants/index.html
@@ -4,7 +4,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="../styles.css" />
-
+    <style type="text/css">
+      html {
+        --tw-bg-opacity: 1;
+        background-color: rgba(209, 213, 219, var(--tw-bg-opacity));
+        height: 100vh;
+      }
+    </style>
     <script src="./index.js"></script>
 
     <tittle>Plants by abdelfatah</tittle>
@@ -13,7 +19,7 @@
     <div class="block" id="block-xjsxp">
       <div class="primo-component" id="component-xjsxp">
         <div>
-          <div class="container bg-white py-6 h-auto">
+          <div class="container bg-white py-6 h-auto mt-4">
             <span class="text-lg"
               ><a href="https://cassiopea.vercel.app/">Home</a><i> / </i>
               <i class="font-bold">Plants</i></span
@@ -124,7 +130,7 @@
                 <div class="text-xl pt-4 text-center">30$</div>
               </div>
             </div>
-            <div class="py-12">
+            <div class="pt-12 pb-6">
               <button
                 class="md:flex md:mx-auto text px-24 rounded-lg md:text-2xl bg-black py-4 text-white"
               >
