--- a/checkout/index.html
+++ b/checkout/index.html
@@ -4,10 +4,54 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="../styles.css" />
-
+    <style type="text/css">
+      html {
+        --tw-bg-opacity: 1;
+        background-color: rgba(209, 213, 219, var(--tw-bg-opacity));
+        height: 100vh;
+      }
+    </style>
     <script src="./index.js"></script>
   </head>
   <body data-instant-intensity="all" class="primo-page">
+    <div class="block" id="block-jawff">
+      <div class="primo-component" id="component-jawff">
+        <div>
+          <div class="container bg-white py-6 h-auto mt-4">
+            <span class="text-lg"
+              ><a href="https://cassiopea.vercel.app/">Home</a><i> / </i>
+              <i class="font-bold">cart</i></span
+            >
+            <h2 class="text-4xl font-semibold pt-6">Checkout</h2>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="block" id="block-nadzg">
+      <div class="primo-component" id="component-nadzg">
+        <div>
+          <section class="container bg-white py-2">
+            <div class="flex text-xs">
+              <i class="fa fa-check-circle fa-2x px-2"></i>
+              <span class="text-xl px-2">Contacts</span>
+              <hr class="mt-3 rounded-full bg-black h-2 w-16" />
+              <i class="fa fa-check-circle-o fa-2x px-2"></i>
+              <span class="text-xl px-2">Shopping</span>
+              <hr class="mt-3 rounded-full bg-gray-400 h-2 w-16" />
+              <i class="fa fa-check-circle-o fa-2x px-2"></i>
+              <span class="text-xl px-2">Payments</span>
+              <hr class="mt-3 rounded-full bg-gray-300 h-2 w-16" />
+            </div>
+          </section>
+          <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+          />
+        </div>
+      </div>
+    </div>
+
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/instant.page/5.1.0/instantpage.js"
       integrity="sha256-DdSiNPR71ROAVMqT6NiHagLAtZv9EHeByYuVxygZM5g="
