--- a/checkout/index.html
+++ b/checkout/index.html
@@ -52,6 +52,40 @@
       </div>
     </div>
 
+    <div class="block" id="block-ascxb">
+      <div class="primo-component" id="component-ascxb">
+        <div>
+          <section class="container bg-white pt-4">
+            <div class="grid grid-flow-col">
+              <div>
+                <h3>Delivery method</h3>
+                <div class="grid grid-flow-row py-4">
+                  <span class="border-4 flex justify-around">
+                    <span>Hello</span>
+                    <span>Hello</span>
+                  </span>
+                  <span class="justify-items-center">Hallo</span>
+                </div>
+              </div>
+              <div class="">
+                <div class="justify-between flex">
+                  <span>Order Total (1)</span>
+                  <span>Edit</span>
+                </div>
+                <div class="pl-4">
+                  <img
+                    class="h-20 w-12"
+                    src="https://unsplash.com/photos/NFj6pEUdmpY/download?force=true&w=640"
+                    alt=""
+                  />
+                </div>
+              </div>
+            </div>
+          </section>
+        </div>
+      </div>
+    </div>
+
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/instant.page/5.1.0/instantpage.js"
       integrity="sha256-DdSiNPR71ROAVMqT6NiHagLAtZv9EHeByYuVxygZM5g="
