--- a/checkout/index.html
+++ b/checkout/index.html
@@ -59,29 +59,49 @@
             <div class="grid grid-flow-col">
               <div>
                 <h3>Delivery method</h3>
-                <div class="grid grid-flow-row py-4">
+                <div class="grid grid-rows-2 py-4">
                   <span class="border-4 flex justify-around">
                     <span>Hello</span>
                     <span>Hello</span>
                   </span>
-                  <span class="justify-items-center">Hallo</span>
+                  <span class="flex justify-around">
+                    <span>Hello</span>
+                    <span>Hello</span>
+                  </span>
                 </div>
               </div>
-              <div class="">
-                <div class="justify-between flex">
+              <div class="border-2 border-blue-900 mb-4 mx-2">
+                <div class="justify-between flex px-2 py-2">
                   <span>Order Total (1)</span>
                   <span>Edit</span>
                 </div>
-                <div class="pl-4">
-                  <img
-                    class="h-20 w-12"
-                    src="https://unsplash.com/photos/NFj6pEUdmpY/download?force=true&w=640"
-                    alt=""
-                  />
+                <div class="pl-2 flex pt-4">
+                  <div class="">
+                    <img
+                      class="h-16 my-2 w-12"
+                      src="https://unsplash.com/photos/NFj6pEUdmpY/download?force=true&w=640"
+                      alt=""
+                    />
+                  </div>
+                  <div class="pl-4">
+                    <div class="flex">
+                      <div class="">Red Rose, 4pcs</div>
+                      <div class="">62$</div>
+                    </div>
+                    <div class="px-4 py-2">
+                      <i class="fa fa-minus border-2 px-1 py- bg-gray-100"></i>
+                      1 <i class="fa fa-plus border-2 px-1 bg-gray-100"></i>
+                    </div>
+                  </div>
                 </div>
+                <div class="px-2 py-6">Shipping</div>
               </div>
             </div>
           </section>
+          <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+          />
         </div>
       </div>
     </div>
