--- a/plants/index.html
+++ b/plants/index.html
@@ -146,7 +146,7 @@
         </div>
       </div>
       <style type="text/css">
-        #component-zpxrx .grid {
+        #component-mackf .grid {
             grid-template-columns: repeat( auto-fit, minmax(300px, 1fr) );
           }
       </style>
