--- a/primo/index.html
+++ b/primo/index.html
@@ -7,7 +7,7 @@
       </head>
 
       <body class="primo-page">   
-        <iframe allow="clipboard-read; clipboard-write self https://app.primo.af" border="0" src="https://app.primo.af/4084f30d-c00c-49ae-858c-43f012263b32/firstone" style="height:100vh;width:100vw;position:absolute;top:0;left:0;border:0;"></iframe>
+        <iframe allow="clipboard-read; clipboard-write self https://app.primo.so" border="0" src="https://app.primo.so/4084f30d-c00c-49ae-858c-43f012263b32/firstone" style="height:100vh;width:100vw;position:absolute;top:0;left:0;border:0;"></iframe>
       </body>
     </html>
   
