--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
      <div class="text-2xl text-blue-900">
         <button class=""><i class="fa fa-search"></i>
     </button> 
-     <button class=""> <i class="fa fa-shopping-cart"></i></button>
+     <button class=""> <a href="cassiopea.vercel.app/checkout" class="fa fa-shopping-cart"></a></button>
      </div>
    </div> 
    <div class="flex justify-center space-x-12 py-12">
